# HomeWork_Cplusplus

./: CMakeLists.txt  main.cpp
HW_10/: 10.06ж.cpp  10.06ж.h  10.13б.cpp  10.13б.h  practica_10.cpp  practica_10.h
HW_11/: 11.06б.cpp  11.06б.h  11.12е.cpp  11.12е.h  numbers.txt  toys.txt
HW_12/: 12.06.cpp  12.06.h  12.16.cpp  12.16.h  F.txt  G.txt
HW_13/: 13.14.cpp  13.14.h  13.17.cpp
HW_14/: 14.12.cpp  14.12.h  14.27.cpp  14.27.h  G.txt  MergedOutput.txt  Name1.txt  Name2.txt  encrypted.txt  expression.txt  input.txt  practica_14.cpp  practica_14.h  students.txt
HW_15/: 15.13.cpp  15.13.h  practica_15.cpp  practica_15.h
HW_16/: 16.06.cpp  16.11.cpp
HW_17/: 17.10.cpp  17.2.cpp
HW_18/: 18.03.cpp  18.1.cpp  18.2.cpp  practica_18.cpp
HW_19/: 19.08.cpp  19.1.cpp  19.12.cpp  19.2.cpp  19.4.cpp  practica_19.cpp
HW_20/: 20.1.cpp  20.12.cpp  20.18.cpp  20.3.cpp  20.8.cpp  file1.txt  file2.txt  points.txt  practica_20.cpp  sorted_segments.txt  tetx.txt
HW_21/: 21.1.cpp  21.14.cpp  21.16.cpp  21.4.cpp  21.5.cpp  dates.txt  practica_21.cpp
HW_5/: 5.09в.cpp  5.09в.h  5.12б.cpp  5.12б.h  5.16ж.cpp  5.16ж.h  practica_5.cpp  practica_5.h
HW_6/: 6.22.cpp  6.22.h  6.26.cpp  6.26.h  practica_6.cpp  practica_6.h
HW_7/: 7.10в.cpp  7.10в.h  7.8б.cpp  7.8б.h  practica_7.cpp  practica_7.h
HW_8/: 8.23.cpp  8.23.h  practica_8.cpp  practica_8.h
HW_9/: 9.08.cpp  9.08.h  9.09й.cpp  9.09й.h  practica_9.cpp  practica_9.h
