cmake_minimum_required(VERSION 3.29)
project(HomeWork)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWork main.cpp
        HW_5/5.09в.cpp
        HW_5/5.09в.h
        HW_5/practica_5.cpp
        HW_5/practica_5.h
        HW_5/5.12б.cpp
        HW_5/5.12б.h
        HW_5/5.16ж.cpp
        HW_5/5.16ж.h
        HW_6/practica_6.cpp
        HW_6/practica_6.h
        HW_6/6.26.cpp
        HW_6/6.26.h
        HW_6/6.22.cpp
        HW_6/6.22.h
        HW_7/practica_7.cpp
        HW_7/practica_7.h
        HW_8/practica_8.cpp
        HW_8/practica_8.h
        HW_7/7.8б.cpp
        HW_7/7.8б.h
        HW_7/7.10в.cpp
        HW_7/7.10в.h
        HW_8/8.23.cpp
        HW_8/8.23.h
)
