cmake_minimum_required(VERSION 3.29)
project(HomeWork)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWork main.cpp
        HW_5/5.09в.cpp
        HW_5/5.09в.h
        HW_5/practica_5.cpp
        HW_5/practica_5.h
        HW_5/5.12б.cpp
        HW_5/5.12б.h
        HW_5/5.16ж.cpp
        HW_5/5.16ж.h
        HW_6/practica_6.cpp
        HW_6/practica_6.h
        HW_6/6.26.cpp
        HW_6/6.26.h
        HW_6/6.22.cpp
        HW_6/6.22.h
        HW_7/practica_7.cpp
        HW_7/practica_7.h
        HW_8/practica_8.cpp
        HW_8/practica_8.h
        HW_7/7.8б.cpp
        HW_7/7.8б.h
        HW_7/7.10в.cpp
        HW_7/7.10в.h
        HW_8/8.23.cpp
        HW_8/8.23.h
        HW_9/practica_9.cpp
        HW_9/practica_9.h
        HW_9/9.08.cpp
        HW_9/9.08.h
        HW_9/9.09й.cpp
        HW_9/9.09й.h
        HW_10/practica_10.cpp
        HW_10/practica_10.h
        HW_10/10.06ж.cpp
        HW_10/10.06ж.h
        HW_10/10.13б.cpp
        HW_10/10.13б.h
        HW_14/practica_14.cpp
        HW_14/practica_14.h
        HW_11/11.06б.cpp
        HW_11/11.06б.h
        HW_11/11.12е.cpp
        HW_11/11.12е.h
        HW_12/12.06.cpp
        HW_12/12.06.h
        HW_12/12.16.cpp
        HW_12/12.16.h
        HW_15/practica_15.cpp
        HW_15/practica_15.h
        HW_13/13.14.cpp
        HW_13/13.14.h
        HW_13/13.17.cpp
        HW_14/14.12.cpp
        HW_14/14.12.h
        HW_14/14.27.cpp
        HW_14/14.27.h
)
